--- a/index.html
+++ b/index.html
@@ -350,19 +350,19 @@
 					        <div class="carouselnews-inner">
 					            <div class="item active animate" data-animate="flipInY">
 					                <blockquote>
-					                  <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-					                  <small>Someone famous in <cite title="Source Title">Source Title</cite></small>
+					                  <p class="lead">JMTI starts IT services for companies in Indonesia.</p>
+					                  <small>April, 2015 <cite title="Source Title"></cite></small>
 					                </blockquote>					            </div>
 					           <div class="item animate" data-animate="flipInY">
 					             	<blockquote>
-					             	  <p class="lead">Bootstrap has a few easy ways to quickly get started, each one appealing to a different skill level and use case. Read through to see what suits your particular needs.</p>
-					             	  <small>Someone famous in <cite title="Source Title">Source Title</cite></small>
+					             	  <p class="lead">JMTI starts 3D CAD(CATIA) Training service in Indonesia.</p>
+					             	  <small>June, 2015<cite title="Source Title"></cite></small>
 					             	</blockquote>
 					           </div>
 					           <div class="item animate" data-animate="flipInY">
 					           		<blockquote>
-						             	<p class="lead">Bring Bootstrap's components to life with over a dozen custom jQuery plugins. Easily include them all, or one by one.</p>
-						             	<small>Someone famous in <cite title="Source Title">Source Title</cite></small>
+						             	<p class="lead">Soft-start of JM Technology Indonesia in Jakarta.</p>
+						             	<small>Jan 1, 2012 <cite title="Source Title"></cite></small>
 					             	</blockquote>
 					            </div>
 					        </div>
@@ -755,7 +755,7 @@ Graphic Design the power of Suspendisse potenti.</p>
                           <!-- Indicators -->
                           <ol class="carousel-indicators">
                             <li data-target="#carousel-example-generic" data-slide-to="0" class="active">
-                            	<img src="images/client1.png" alt="" title="" class="img-circle">
+                            	<img src="images/cp-thumb.jpg" alt="" title="" class="img-circle">
                                 <span><b>Company Profile</b></span>
                             </li>
                             <li data-target="#carousel-example-generic" data-slide-to="1">
