Fix link for news

--- a/it_infra_service.html
+++ b/it_infra_service.html
@@ -66,7 +66,7 @@
                   <ul class="nav navbar-nav">
                     <li ><a href="index.html#home">HOME</a></li>
                     <li class="active"><a href="index.html#productsandservices">Product and Service</a></li>
-                    <li><a href="index.html#news">News</a></li>
+                    <li><a href="index.html#newsslider">News</a></li>
                     <li><a href="index.html#companyprofile">Company Profile</a></li>
                     <li><a href="index.html#recruitment">Recruitment</a></li>
                   </ul>
