--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <div class="caption sfb" data-x="30" data-y="375" data-speed="1800" data-start="3000" data-easing="easeOutBack"><a href="index.html" target="_blank" class="button blue small">READ MORE</a></div>-->
                 </li>
 				<!-- FADE -->
-				<li data-transition="fade" data-slotamount="10"> 										
+				<!--<li data-transition="fade" data-slotamount="10"> 										
                     <img src="images/slides/thumb4.jpg" alt="" />									
                     <!--<div class="caption lfr" data-x="820" data-y="70" data-speed="1200" data-start="1300" data-easing="easeOutBack"><img src="images/slides/women.png" alt="" /></div>
                     <div class="caption lfb" data-x="570" data-y="0" data-speed="19000" data-start="3400" data-easing="easeOutBack"><img src="images/slides/para-large.png" alt="" /></div>
@@ -148,7 +148,7 @@
                     <div class="caption lfl medium_grey" data-x="30" data-y="305" data-speed="300" data-start="2500" data-easing="easeOutExpo">Quisque ultricies vestibulum Graphic t river molestie </div>
                     <div class="caption lfb small_text" data-x="30" data-y="328" data-speed="1800" data-start="2600" data-easing="easeOutExpo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sagittis, sem quis lacinia faucibus, orci ipsum gravida tortor,<br/> vel interdum mi sapien ut justo.Nulla varius consequat magna</div>
                     <div class="caption sfb" data-x="30" data-y="375" data-speed="1800" data-start="3400" data-easing="easeOutBack"><a href="index.html" target="_blank" class="button red small">READ MORE</a></div>-->
-                </li>
+               <!-- </li>-->
             </ul>		
             <div class="tp-bannertimer"></div>												
         </div>					
@@ -297,7 +297,7 @@
 			<!-- BEGIN PORTFOLIO -->
             <div class="portfolio-item products">
                <div class="portfolio">
-                  <div class="img-overlay"></div><a href="images/portfolio/portfolio8.jpg" class="portfolio-image fancybox">
+                  <div class="img-overlay"></div><a href="images/product/system-devlop.jpg" class="portfolio-image fancybox">
                       <i class="fa fa-search"></i></a>
                       <a href="http://google.com" target="_blank">
                       <i class="fa fa-link"></i>
@@ -309,7 +309,7 @@
 			<!-- BEGIN PORTFOLIO -->
             <div class="portfolio-item services">
                <div class="portfolio">
-                  <div class="img-overlay"></div><a href="images/portfolio/portfolio8.jpg" class="portfolio-image fancybox">
+                  <div class="img-overlay"></div><a href="images/product/it-solution.jpg" class="portfolio-image fancybox">
                       <i class="fa fa-search"></i></a>
                       <a href="http://google.com" target="_blank">
                       <i class="fa fa-link"></i>
@@ -321,7 +321,7 @@
 			<!-- BEGIN PORTFOLIO -->
             <div class="portfolio-item cad">
                <div class="portfolio">
-                  <div class="img-overlay"></div><a href="images/portfolio/portfolio8.jpg" class="portfolio-image fancybox">
+                  <div class="img-overlay"></div><a href="images/product/catia.jpg" class="portfolio-image fancybox">
                       <i class="fa fa-search"></i></a>
                       <a href="overview.html" target="_self">
                       <i class="fa fa-link"></i>
@@ -1009,14 +1009,15 @@ Graphic Design the power of Suspendisse potenti.</p>
                     <!-- END EXPERIENCE CONTENT -->
                 </div>
                 </div>
-                <div class="container">
+               <!-- <div class="container">
                 	<!-- BEGIN DEVICES -->
-						<ul class="social"><object class="text-center" width="500" height="200" align="center" data="recruit/110426_recruit.swf"></object>
+						<!--<ul class="social"><object class="text-center" width="500" height="200" align="center" data="recruit/110426_recruit.swf"></object>
 						</ul>
 	                <!-- <div class="col-md-12 text-center devices bounceInUp" data-delay="100"><img src="images/devices.png" alt=""></div>-->
                     <!-- END DEVICES -->
-                </div>
-        </div>
+               <!-- </div>-->
+				     	<!-- BEGIN TEAM -->
+                 </div>
     </section>
     <!-- END EXPERIENCE SECTION -->
 	
@@ -1084,11 +1085,8 @@ Graphic Design the power of Suspendisse potenti.</p>
     	<div class="container">
         	<!-- BEGIN SOCIAL -->
         	<ul class="social">
-            	<li class="bounceIn" data-delay="0"><a href="#."><i class="fa fa-facebook"></i></a></li>
-            	<li class="bounceIn" data-delay="100"><a href="#."><i class="fa fa-twitter"></i></a></li>
-            	<li class="bounceIn" data-delay="200"><a href="#."><i class="fa fa-google-plus"></i></a></li>
-            	<li class="bounceIn" data-delay="300"><a href="#."><i class="fa fa-dribbble"></i></a></li>
-            	<li class="bounceIn" data-delay="400"><a href="#."><i class="fa fa-pinterest"></i></a></li>
+            	<li class="bounceIn" data-delay="0"><a href="https://www.facebook.com/jmtindonesia?fref=ts"><i class="fa fa-facebook"></i></a></li>
+            	<li class="bounceIn" data-delay="100"><a href="https://www.linkedin.com/company/jmtindonesia"><i class="fa fa-linkedin"></i></a></li>
             </ul>
             <!-- BEGIN SOCIAL -->
             <!-- BEGIN COPYRIGHT -->
@@ -1341,6 +1339,7 @@ Graphic Design the power of Suspendisse potenti.</p>
  	<!-- revolution code -->
     
     <script type="text/javascript">
+	
 		var tpj=jQuery;
 		tpj.noConflict();
 		
