--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <ul>	
                 <!-- FADE -->
                 <li data-transition="fade" data-slotamount="10"> 										
-                    <img src="images/slides/thumb1.jpg" alt="" />									
+                    <img src="images/slides/slide1.png" alt="" />									
                     <!--<div class="caption lfr" data-x="820" data-y="70" data-speed="1200" data-start="1300" data-easing="easeOutBack"><img src="images/slides/women.png" alt="" /></div>
                     <div class="caption lfb" data-x="570" data-y="0" data-speed="19000" data-start="3400" data-easing="easeOutBack"><img src="images/slides/para-large.png" alt="" /></div>
                     <div class="caption lfb" data-x="430" data-y="450" data-speed="12200" data-start="3400" data-easing="easeOutBack"><img src="images/slides/para-small.png" alt="" /></div>-->
@@ -116,34 +116,34 @@
                    <!-- <div class="caption lft very_large_text2" data-x="215" data-y="220" data-speed="1800" data-start="2000" data-easing="easeOutExpo"></div>	
                     <div class="caption lfl medium_grey" data-x="30" data-y="305" data-speed="300" data-start="2500" data-easing="easeOutExpo">Quisque ultricies vestibulum Graphic t river molestie </div>
                     <div class="caption lfb small_text" data-x="30" data-y="328" data-speed="1800" data-start="2600" data-easing="easeOutExpo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sagittis, sem quis lacinia faucibus, orci ipsum gravida tortor,<br/> vel interdum mi sapien ut justo.Nulla varius consequat magna</div>-->
-                    <div class="caption sfb" data-x="30" data-y="375" data-speed="1800" data-start="3400" data-easing="easeOutBack"><a href="system_development.html" target="_self" class="button blue small">READ MORE</a></div>
+                    <div class="caption sfb" data-x="30" data-y="375" data-speed="1800" data-start="3400" data-easing="easeOutBack"><a href="it_infra_service.html" target="_self" class="button blue small">READ MORE</a></div>
                 </li>
                 <!-- FADE -->
                 <li data-transition="fade" data-slotamount="10"> 										
-                    <img src="images/slides/thumb2.jpg" alt="" />
+                    <img src="images/slides/slide2.png" alt="" />
                     <!--<div class="caption lfl" data-x="870" data-y="60" data-speed="20999" data-start="3000" data-easing="easeOutBack"><img src="images/slides/color-large-para.png" alt="" /></div>
                     <div class="caption lfr" data-x="430" data-y="450" data-speed="20999" data-start="3000" data-easing="easeOutBack"><img src="images/slides/color-small-para.png" alt="" /></div>-->
                     <div class="caption lft very_large_text4" data-x="30" data-y="220" data-speed="1200" data-start="1500" data-easing="easeOutExpo">System Development</div>	
                     <!--<div class="caption lfl medium_grey2" data-x="230" data-y="305" data-speed="0" data-start="2500" data-easing="easeOutExpo">Quisque ultricies vestibulum Graphic or river molestie ultricies vestibulum Graphic </div>-->
-          <div class="caption sfb" data-x="30" data-y="340" data-speed="1200" data-start="2000" data-easing="easeOutBack"><a href="index.html" target="_blank" class="button red small">READ MORE</a></div>
+          <div class="caption sfb" data-x="30" data-y="340" data-speed="1200" data-start="2000" data-easing="easeOutBack"><a href="system_development.html" target="self" class="button red small">READ MORE</a></div>
                 </li>
                 <!-- FADE -->
-                <li data-transition="fade" data-slotamount="10"> 										
-                    <img src="images/slides/thumb3.jpg" alt="" />
-                   <!-- <div class="caption lfb" data-x="820" data-y="110" data-speed="1500" data-start="1300" data-easing="easeOutBack"><img src="images/slides/tablet.png" alt="" /></div>-->
-                    <div class="caption lft very_large_text4" data-x="30" data-y="215" data-speed="1800" data-start="2000" data-easing="easeOutExpo">3D CAD</div>	
+                  <!-- <li data-transition="fade" data-slotamount="10"> 										
+                      <img src="images/slides/thumb3.jpg" alt="" />
+                   <div class="caption lfb" data-x="820" data-y="110" data-speed="1500" data-start="1300" data-easing="easeOutBack"><img src="images/slides/tablet.png" alt="" /></div>
+                     <div class="caption lft very_large_text4" data-x="30" data-y="215" data-speed="1800" data-start="2000" data-easing="easeOutExpo">3D CAD</div>	
                     <div class="caption lft very_large_text5" data-x="230" data-y="220" data-speed="1800" data-start="2000" data-easing="easeOutExpo">Training Service</div>	
                     <!--<div class="caption lfl medium_grey2" data-x="30" data-y="305" data-speed="300" data-start="2500" data-easing="easeOutExpo">Quisque ultricies vestibulum Graphic t river molestie </div>
                     <div class="caption lfb small_text2" data-x="30" data-y="328" data-speed="1800" data-start="2600" data-easing="easeOutExpo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sagittis, sem quis lacinia faucibus orci ipsum,<br/> gravida tortor vel interdum mi sapien ut justo.Nulla varius consequat magna</div>
-                    <div class="caption sfb" data-x="30" data-y="375" data-speed="1800" data-start="3000" data-easing="easeOutBack"><a href="index.html" target="_blank" class="button blue small">READ MORE</a></div>-->
-                </li>
+                    <div class="caption sfb" data-x="30" data-y="375" data-speed="1800" data-start="3000" data-easing="easeOutBack"><a href="index.html" target="_blank" class="button blue small">READ MORE</a></div>
+                </li>-->
 				<!-- FADE -->
 				<!--<li data-transition="fade" data-slotamount="10"> 										
                     <img src="images/slides/thumb4.jpg" alt="" />									
                     <!--<div class="caption lfr" data-x="820" data-y="70" data-speed="1200" data-start="1300" data-easing="easeOutBack"><img src="images/slides/women.png" alt="" /></div>
                     <div class="caption lfb" data-x="570" data-y="0" data-speed="19000" data-start="3400" data-easing="easeOutBack"><img src="images/slides/para-large.png" alt="" /></div>
                     <div class="caption lfb" data-x="430" data-y="450" data-speed="12200" data-start="3400" data-easing="easeOutBack"><img src="images/slides/para-small.png" alt="" /></div>-->
-                    <div class="caption lft very_large_text" data-x="30" data-y="220" data-speed="1800" data-start="2000" data-easing="easeOutExpo">Catia V5</div>	
+                    <!--<div class="caption lft very_large_text" data-x="30" data-y="220" data-speed="1800" data-start="2000" data-easing="easeOutExpo">Catia V5</div>	
                     <!--<div class="caption lft very_large_text2" data-x="215" data-y="220" data-speed="1800" data-start="2000" data-easing="easeOutExpo"></div>	
                     <div class="caption lfl medium_grey" data-x="30" data-y="305" data-speed="300" data-start="2500" data-easing="easeOutExpo">Quisque ultricies vestibulum Graphic t river molestie </div>
                     <div class="caption lfb small_text" data-x="30" data-y="328" data-speed="1800" data-start="2600" data-easing="easeOutExpo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sagittis, sem quis lacinia faucibus, orci ipsum gravida tortor,<br/> vel interdum mi sapien ut justo.Nulla varius consequat magna</div>
@@ -166,11 +166,11 @@
 	       <div  id="filters">
            		<!-- BEGIN PORTFOLIO NAV -->
                 <ul class="clearfix">
-					<li><a href="#" data-filter="*" class="active"><h3>All</h3></a></li>
-                    <li><a href="#" data-filter=".services"><h3>IT Services</h3></a></li>
+					<!--<li><a href="#" data-filter="*" class="active"><h3>All</h3></a></li>
+                     <li><a href="#" data-filter=".services"><h3>IT Services</h3></a></li>
                     <li><a href="#" data-filter=".products"><h3>IT Products</h3></a></li>
                     <li><a href="#" data-filter=".cad"><h3>3D CAD Training Service</h3></a></li>
-                   <!-- <li><a href="#" data-filter=".videography"><h3>Videography</h3></a></li>
+                   <li><a href="#" data-filter=".videography"><h3>Videography</h3></a></li>
                     <li><a href="#" data-filter=".web"><h3>Web</h3></a></li>-->
                 </ul>
                 <!-- END PORTFOLIO NAV -->
@@ -259,7 +259,7 @@
             </div>
 			<!-- END PORTFOLIO -->
             <!-- BEGIN PORTFOLIO -->
-            <div class="portfolio-item products">
+            <!--<div class="portfolio-item products">
                <div class="portfolio">
                   <div class="img-overlay"></div><a href="images/product/googleapp.jpg" class="portfolio-image fancybox">
                       <i class="fa fa-search"></i></a>
@@ -299,7 +299,7 @@
                <div class="portfolio">
                   <div class="img-overlay"></div><a href="images/product/system-devlop.jpg" class="portfolio-image fancybox">
                       <i class="fa fa-search"></i></a>
-                      <a href="http://google.com" target="_blank">
+                      <a href="system_development.html" target="_self">
                       <i class="fa fa-link"></i>
                     </a>
                       <img src="images/product/system-devlop.jpg" alt="">
@@ -311,7 +311,7 @@
                <div class="portfolio">
                   <div class="img-overlay"></div><a href="images/product/it-solution.jpg" class="portfolio-image fancybox">
                       <i class="fa fa-search"></i></a>
-                      <a href="http://google.com" target="_blank">
+                      <a href="it_infra_service.html" target="_self">
                       <i class="fa fa-link"></i>
                     </a>
                       <img src="images/product/it-solution.jpg" alt="">
@@ -467,7 +467,7 @@
                     	<!-- BEGIN HEADING -->
                     	<h2 class="orange text-center"> Company Profile</h2>
                         <!-- END HEADING -->
-                        <div id="carousel-example-generic" class="carousel slide flipInY" data-ride="carousel">
+                        <div id="carousel-example-generic" class="" data-ride="">
 
                           <!-- Wrapper for slides -->
                           <div class="carousel-inner text-center">
@@ -902,15 +902,15 @@ Graphic Design the power of Suspendisse potenti.</p>
                           <!-- Indicators -->
                           <ol class="carousel-indicators">
                             <li data-target="#carousel-example-generic" data-slide-to="0" class="active">
-                            	<img src="images/cp-thumb1.jpg" alt="" title="" class="img-circle">
+                            	<!--<img src="images/cp-thumb1.jpg" alt="" title="" class="img-circle">-->
                                 <span><b>Company Profile</b></span>
                             </li>
                             <li data-target="#carousel-example-generic" data-slide-to="1">
-                            	<img src="images/cp-thumb2.jpg" alt="" title="" class="img-circle">
-                                <span><b>Company</b></span>
+                            	<!--<img src="images/cp-thumb2.jpg" alt="" title="" class="img-circle">-->
+                                <span><b>Vision</b></span>
                             </li>
                             <li data-target="#carousel-example-generic" data-slide-to="2">
-                            	<img src="images/cp-thumb3.jpg" alt="" title="" class="img-circle">
+                            	<!--<img src="images/cp-thumb3.jpg" alt="" title="" class="img-circle">-->
                                 <span><b>History</b></span>
                             </li>
                            <!--<li data-target="#carousel-example-generic" data-slide-to="3">
