Fix link for home

--- a/assembly_design.html
+++ b/assembly_design.html
@@ -57,7 +57,7 @@
                 <span class="icon-bar"></span>
               </button>
               <!-- BEGIN LOGO -->
-              <a class="navbar-brand" href="#home"><img src="images/head_m_01.png" alt=""></a>
+              <a class="navbar-brand" href="index.html"><img src="images/head_m_01.png" alt=""></a>
               <!-- END LOGO -->
             </div>
         
@@ -190,7 +190,7 @@
             </ul>
             <!-- BEGIN SOCIAL -->
             <!-- BEGIN COPYRIGHT -->
-            <p class="copyright">Copyrights 2015, PT JM Tech Indonesia. All rights reserved. </p>
+            <p class="copyright">Copyrights 2015, JM TECHNOLOGY INDONESIA ALL RIGHTS RESERVED. </p>
             <!-- END COPYRIGHT -->
         </div>
     </footer>        
