--- a/surface_design.html
+++ b/surface_design.html
@@ -57,7 +57,7 @@
                 <span class="icon-bar"></span>
               </button>
               <!-- BEGIN LOGO -->
-              <a class="navbar-brand" href="#home"><img src="images/head_m_01.png" alt=""></a>
+              <a class="navbar-brand" href="index.html"><img src="images/head_m_01.png" alt=""></a>
               <!-- END LOGO -->
             </div>
         
@@ -65,7 +65,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             	<!-- BEGIN NAVIGATION -->
                   <ul class="nav navbar-nav">
-                      <li ><a href="index.html#home">HOME</a></li>
+                      <li ><a href="index.html">HOME</a></li>
                     <li class="active"><a href="index.html#productsandservices">Product and Service</a></li>
                     <li><a href="index.html#newsslider">News</a></li>
                     <li><a href="index.html#companyprofile">Company Profile</a></li>
@@ -186,7 +186,7 @@
             </ul>
             <!-- BEGIN SOCIAL -->
             <!-- BEGIN COPYRIGHT -->
-            <p class="copyright">Copyrights 2015, PT JM Tech Indonesia. All rights reserved. </p>
+            <p class="copyright">Copyrights 2015, JM TECHNOLOGY INDONESIA ALL RIGHTS RESERVED. </p>
             <!-- END COPYRIGHT -->
         </div>
     </footer>        
