--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                     	<!-- BEGIN HEADING -->
                     	<h2 class="orange text-center"> Company Profile</h2>
                         <!-- END HEADING -->
-                        <div id="carousel-example-generic" class="" data-ride="">
+                        <div id="carousel-example-generic">
 
                           <!-- Wrapper for slides -->
                           <div class="carousel-inner text-center">
@@ -903,7 +903,7 @@ Graphic Design the power of Suspendisse potenti.</p>
                           <ol class="carousel-indicators">
                             <li data-target="#carousel-example-generic" data-slide-to="0" class="active">
                             	<!--<img src="images/cp-thumb1.jpg" alt="" title="" class="img-circle">-->
-                                <span><b>Company Profile</b></span>
+                                <span ><b>Company Profile</b></span>
                             </li>
                             <li data-target="#carousel-example-generic" data-slide-to="1">
                             	<!--<img src="images/cp-thumb2.jpg" alt="" title="" class="img-circle">-->
@@ -911,7 +911,7 @@ Graphic Design the power of Suspendisse potenti.</p>
                             </li>
                             <li data-target="#carousel-example-generic" data-slide-to="2">
                             	<!--<img src="images/cp-thumb3.jpg" alt="" title="" class="img-circle">-->
-                                <span><b>History</b></span>
+                                <span><b> History </b></span>
                             </li>
                            <!--<li data-target="#carousel-example-generic" data-slide-to="3">
                             	<img src="images/client4.png" alt="" title="" class="img-circle">
