--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <!--<div class="caption lfr" data-x="820" data-y="70" data-speed="1200" data-start="1300" data-easing="easeOutBack"><img src="images/slides/women.png" alt="" /></div>
                     <div class="caption lfb" data-x="570" data-y="0" data-speed="19000" data-start="3400" data-easing="easeOutBack"><img src="images/slides/para-large.png" alt="" /></div>
                     <div class="caption lfb" data-x="430" data-y="450" data-speed="12200" data-start="3400" data-easing="easeOutBack"><img src="images/slides/para-small.png" alt="" /></div>-->
-                    <div class="caption lft very_large_text" data-x="30" data-y="220" data-speed="1800" data-start="2000" data-easing="easeOutExpo">it infra services</div>	
+                    <div class="caption lft very_large_text3" data-x="30" data-y="220" data-speed="1800" data-start="2000" data-easing="easeOutExpo">it infra services</div>	
                    <!-- <div class="caption lft very_large_text2" data-x="215" data-y="220" data-speed="1800" data-start="2000" data-easing="easeOutExpo"></div>	
                     <div class="caption lfl medium_grey" data-x="30" data-y="305" data-speed="300" data-start="2500" data-easing="easeOutExpo">Quisque ultricies vestibulum Graphic t river molestie </div>
                     <div class="caption lfb small_text" data-x="30" data-y="328" data-speed="1800" data-start="2600" data-easing="easeOutExpo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sagittis, sem quis lacinia faucibus, orci ipsum gravida tortor,<br/> vel interdum mi sapien ut justo.Nulla varius consequat magna</div>-->
@@ -123,9 +123,9 @@
                     <img src="images/slides/slide2.png" alt="" />
                     <!--<div class="caption lfl" data-x="870" data-y="60" data-speed="20999" data-start="3000" data-easing="easeOutBack"><img src="images/slides/color-large-para.png" alt="" /></div>
                     <div class="caption lfr" data-x="430" data-y="450" data-speed="20999" data-start="3000" data-easing="easeOutBack"><img src="images/slides/color-small-para.png" alt="" /></div>-->
-                    <div class="caption lft very_large_text4" data-x="30" data-y="220" data-speed="1200" data-start="1500" data-easing="easeOutExpo">System Development</div>	
+                    <div class="caption lft very_large_text3" data-x="30" data-y="220" data-speed="1200" data-start="1500" data-easing="easeOutExpo">System Development</div>	
                     <!--<div class="caption lfl medium_grey2" data-x="230" data-y="305" data-speed="0" data-start="2500" data-easing="easeOutExpo">Quisque ultricies vestibulum Graphic or river molestie ultricies vestibulum Graphic </div>-->
-          <div class="caption sfb" data-x="30" data-y="340" data-speed="1200" data-start="2000" data-easing="easeOutBack"><a href="system_development.html" target="self" class="button red small">READ MORE</a></div>
+          <div class="caption sfb" data-x="30" data-y="340" data-speed="1200" data-start="2000" data-easing="easeOutBack"><a href="system_development.html" target="self" class="button blue small">READ MORE</a></div>
                 </li>
                 <!-- FADE -->
                   <!-- <li data-transition="fade" data-slotamount="10"> 										
@@ -465,7 +465,7 @@
             	<div class="row">
                 	<div class="col-md-12">
                     	<!-- BEGIN HEADING -->
-                    	<h2 class="orange text-center"> Company Profile</h2>
+                    	<!--<h2 class="orange text-center"> Company Profile</h2>-->
                         <!-- END HEADING -->
                         <div id="carousel-example-generic">
 
@@ -475,7 +475,7 @@
                               <!-- BEGIN TESTIMONIALS -->
                               <div class="testimonial">
                               <i class="fa fa-quote-left"></i>
-                              	<p>
+                              	<p><h2 class="orange text-center"> Company Profile</h2><hr>
 									<TABLE class="text-left" style="WIDTH: 690px" border=0 cellSpacing=0 cellPadding=0 width="690" background="">
 											
 											<TR>
@@ -510,7 +510,7 @@
 											<TR>
 												<TD width="10">　</TD>
 												<TD class="MS10_sky" vAlign=top width="210">Address</TD>
-												<TD vAlign=top><SPAN class=MS10_red></SPAN><SPAN class=MS10_blk><p>Sovereign Plaza 6th Floor<!--<A class="L_s_DarkBlue" onclick="MM_openBrWindow('/m_map_fukuoka_1','map','width=700,height=384')" href="javascript:void(0);">&gt;&gt;map</A>-->
+												<TD vAlign=top><SPAN class=MS10_red><p>Sovereign Plaza 6th Floor</span>&nbsp&nbsp&nbsp<A href="https://www.google.co.id/maps/place/Sovereign+Plaza,+Jl.+Tahi+Bonar+Simatupang,+Cilandak,+Kota+Jkt+Sel.,+Daerah+Khusus+Ibukota+Jkt+12430/@-6.2930045,106.8030083,17z/data=!3m1!4b1!4m2!3m1!1s0x2e69f1e4f62c0bf5:0xd3e1c01edc3f6d5" target="_blank">&gt;&gt;map</A>
 												<BR>Jl. TB Simatupang Kav. 36, Jakarta 12430<BR>TEL (021) 2940-0239 FAX (021) 2940-0238</SPAN></p></TD></TR></TABLE>
 
 									<TABLE class="text-left" border=0 cellSpacing=0 cellPadding=0 width="690">
@@ -590,7 +590,7 @@
                               <!-- BEGIN TESTIMONIALS VISION -->
                               <div class="testimonial">
                               	<i class="fa fa-quote-left"></i>
-                              	<p>
+                              	<p><h2 class="orange text-center"> Vision</h2><hr>
 							<TABLE class="text-left" style="WIDTH: 700px" border=0 cellSpacing=0 cellPadding=0 width="700" background="">
 
 							<TR>
@@ -662,16 +662,7 @@
                               <!-- BEGIN TESTIMONIALS HISTORY -->
                               <div class="testimonial">
                               	<i class="fa fa-quote-left"></i>
-                              	<p><TABLE style="WIDTH: 100%" border=0 cellSpacing=0 cellPadding=0 width="100%" background="">
-
-										<TR>
-										<TD style="PADDING-BOTTOM: 0px; PADDING-LEFT: 0px; PADDING-RIGHT: 0px; PADDING-TOP: 0px" vAlign=top>
-										<TABLE  style="BORDER-BOTTOM: #666666 1px dotted" border=0 cellSpacing=0 cellPadding=0 width="100%">
-
-										<TR>
-										<TD height="21"><!--<IMG alt="沿革" src="../library/image/profile/t_history.gif" width="120" height="20">-->History</TD></TR>
-										<TR>
-										<TD></TD></TR></TABLE><BR>
+                              	<p><h2 class="orange text-center"> History</h2><hr>
 										<TABLE class="text-left" border=0 cellSpacing=0 cellPadding=0 width="100%">
 
 										<TR>
@@ -881,7 +872,7 @@
 
 
 
-										</TABLE><BR><BR></TD></TR></TABLE></p>
+										</TABLE><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR><BR></TD></TR></TABLE></p>
 							<i class="fa fa-quote-right"></i>
                               </div>
                               <!-- END TESTIMONIALS -->
