--- a/news_jmt_indonesia_starts_3d_software.html
+++ b/news_jmt_indonesia_starts_3d_software.html
@@ -82,7 +82,9 @@
         <div class="row">
         <div class="container">
     	<div class="container">
-        <img class="blog-post" src="images/cad/new1.jpg" align="center" alt=""><!-- <b><h4><center>-Three languages support boosts to manufacturing industry in Indonesia -</center></h4></b> -->
+        <img class="blog-post" src="images/cad/new1.jpg" align="center" alt=""><b>
+</br>
+<h4>-Three languages support boosts to manufacturing industry in Indonesia -</h4></b>
         <p style="text-align:justify"> JM Technology Inc.(JMT) announced today that its foreign subsidiary PT. JMT INDONESIA (“JMTI”, Jakarta)
 has started Education Services for 3D CAD software “CATIA” in 3 languages (Japanese, English, and
 Indonesian), in collaboration with Fasotec. Co., Ltd. (“Fasotec”, Headquarters: Chiba, Chiba Prefecture,
